unpackaged/main/default/objects/Salesforce_Customisation__c/Salesforce_Customisation__c.object-meta.xml
<CustomObject>
    <description>This object is used to record all changes made to support customisation within Salesforce. It is a replacement for our Change Control spreadsheet.</description>
    <label>Salesforce Customisation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Salesforce Customisation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Customisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>