unpackaged/main/default/objects/Salesforce_Customisation__c/fields/Deployment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instructions__c</fullName>
    <label>Deployment Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>