unpackaged/main/default/objects/Salesforce_Customisation__c/fields/DEV__c.field-meta.xml
<CustomField>
    <fullName>DEV__c</fullName>
    <inlineHelpText>Date of affect in DEV</inlineHelpText>
    <label>DEV</label>
    <type>Date</type>
</CustomField>