unpackaged/main/default/objects/Salesforce_Customisation__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <inlineHelpText>The name of the item customised or created</inlineHelpText>
    <label>Item Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>