unpackaged/main/default/objects/Salesforce_Customisation__c/fields/PROD__c.field-meta.xml
<CustomField>
    <fullName>PROD__c</fullName>
    <inlineHelpText>Date of affect in Production</inlineHelpText>
    <label>PROD</label>
    <type>Date</type>
</CustomField>