unpackaged/main/default/objects/Salesforce_Customisation__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <inlineHelpText>Links the item to a Jira Issue or Change Request Case Number</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>