unpackaged/main/default/objects/Salesforce_Customisation__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <inlineHelpText>The parent object to which this item relates. eg Case, Account etc etc</inlineHelpText>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>