unpackaged/main/default/objects/Salesforce_Customisation__c/fields/Secondary_Reference__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Reference__c</fullName>
    <label>Secondary Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>