unpackaged/main/default/objects/Salesforce_Customisation__c/fields/UAT__c.field-meta.xml
<CustomField>
    <fullName>UAT__c</fullName>
    <inlineHelpText>Date of affect in UAT</inlineHelpText>
    <label>UAT</label>
    <type>Date</type>
</CustomField>