unpackaged/main/default/objects/Salesforce_Customisation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Related_Object__c</columns>
    <columns>Type__c</columns>
    <columns>Action__c</columns>
    <columns>DEV__c</columns>
    <columns>UAT__c</columns>
    <columns>PROD__c</columns>
    <columns>Deployment_Instructions__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>