unpackaged/main/default/objects/Salesforce_Customisation__c/listViews/All_with_Deployment_Instructions.listView-meta.xml
<ListView>
    <fullName>All_with_Deployment_Instructions</fullName>
    <columns>NAME</columns>
    <columns>Reference__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Deployment_Instructions__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Deployment Instructions</label>
</ListView>