unpackaged/main/default/objects/Salesforce_Customisation__c/listViews/Not_in_Production.listView-meta.xml
<ListView>
    <fullName>Not_in_Production</fullName>
    <columns>NAME</columns>
    <columns>DEV__c</columns>
    <columns>UAT__c</columns>
    <columns>PROD__c</columns>
    <columns>Item_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Action__c</columns>
    <columns>Related_Object__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Deployment_Instructions__c</columns>
    <columns>Description__c</columns>
    <columns>Notes__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PROD__c</field>
        <operation>equals</operation>
    </filters>
    <label>Not in Production</label>
</ListView>