unpackaged/main/default/objects/Salesforce_Customisation__c/listViews/SCE_279.listView-meta.xml
<ListView>
    <fullName>SCE_279</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Action__c</columns>
    <columns>Related_Object__c</columns>
    <columns>Description__c</columns>
    <columns>DEV__c</columns>
    <columns>UAT__c</columns>
    <columns>PROD__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Notes__c</columns>
    <columns>Reference__c</columns>
    <columns>Secondary_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reference__c</field>
        <operation>equals</operation>
        <value>SCE-279</value>
    </filters>
    <label>SCE-279 - Complete</label>
</ListView>